--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Assignment 3</title>
-    <script src="source/main.jsx" type="module"></script>
+    <script src="source/editor.jsx" type="module"></script>
+    <link rel="stylesheet" href="source/style.css">
   </head>
   <body>
-    <section id="root"></section>
-  </body>
+    <!-- <section id="root"></section> -->
+<div id="root"></div>  </body>
 </html>
