--- a/index.html
+++ b/index.html
@@ -7,6 +7,5 @@
     <link rel="stylesheet" href="source/style.css">
   </head>
   <body>
-    <!-- <section id="root"></section> -->
-<div id="root"></div>  </body>
+    <section id="root"></section>
 </html>
