ver 0.2.1 (update title)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Assignment 3</title>
+    <title>Project Managing Tree</title>
     <script src="source/editor.jsx" type="module"></script>
     <link rel="stylesheet" href="source/style.css">
   </head>
